--- a/public/html/base.html
+++ b/public/html/base.html
@@ -48,25 +48,53 @@
         </div>
 
     <div class="row">
-        <div class="col-2">
-            <div class="sideTitle">Players</div>
-            <div class="accord">
-                <h4 class="accordbtn">Global</h4>
-                <div class="accordcon">
-                    <ul id="globalPlayers">
-                        <li>Austin</li>
-                    </ul>
+        <div class="col-2" id="left">
+            <div class="page-header sideTitle">
+                <h2>Players</h2>
+            </div>
+
+            <div id="accordion-players">
+                <div class="card">
+                    <div class="card-header" id="headingPlayersOne">
+                        <h5 class="mb-0">
+                            <button class="btn btn-link" data-toggle="collapse" data-target="#collapsePlayersOne" aria-expanded="true" aria-controls="collapsePlayersOne">
+                                Global
+                            </button>
+                        </h5>
+                    </div>
+
+                    <div id="collapsePlayersOne" class="collapse show" aria-labelledby="headingPlayersOne" data-parent="#accordion-players">
+                        <div id="global-player" class="card-body">
+                            <div class="scroll">
+                                <ul>
+                                    <li>Austin</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <h4 class="accordbtn">Lobby</h4>
-                <div class="accordcon">
-                    <ul id="LobbyPlayers">
-                        <li>Some random Guy</li>
-                    </ul>
+                <div class="card">
+                    <div class="card-header" id="headingPlayersTwo">
+                        <h5 class="mb-0">
+                            <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapsePlayersTwo" aria-expanded="false" aria-controls="collapsePlayersTwo">
+                                Lobby
+                            </button>
+                        </h5>
+                    </div>
+                    <div id="collapsePlayersTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion-players">
+                        <div id=lobby-players" class="card-body">
+                            <div class="scroll">
+                                <ul>
+                                    <li>Some guy</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
         <div class="col-8">
-            <nav class="navbar navbar-expand-sm navbar-light bg-light">
+            <nav class="navbar navbar-expand-sm navbar-light">
                 <div class="collapse navbar-collapse" id="navbarText">
                     <ul class="navbar-nav">
                         <li class="nav-item">
@@ -85,6 +113,7 @@
             <div id="main">
                 <!-- Loaded From Snippets -->
             </div>
+
             <div class="leaderboard">
                 <h1>Top Players</h1>
                 <div class="accord">
@@ -103,10 +132,64 @@
                 </div>
             </div>
         </div>
-        <div id="chat" class="col-2">
-            <div class="sideTitle">Chat</div>
-            <div class="accord">
-                <h4 class="accordbtn">Global</h4>
+
+        <div id="chat" class="col-2 right">
+            <div class="page-header sideTitle">
+                <h2>Chat</h2>
+            </div>
+
+            <div id="accordion-chat">
+                <div class="card">
+                    <div class="card-header" id="headingOne">
+                        <h5 class="mb-0">
+                            <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                Global Chat
+                            </button>
+                        </h5>
+                    </div>
+
+                    <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion-chat">
+                        <div id="global-chat" class="card-body">
+                            <div class="scroll">
+                                <ul></ul>
+                            </div>
+                            <div class="chatInput">
+                                <form class="chat-input" action="">
+                                    <input type="text" name="message" autocomplete="off" placeholder="Your message here"/>
+                                    <input type="submit" value="Send"/>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-header" id="headingTwo">
+                        <h5 class="mb-0">
+                            <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                Lobby Chat
+                            </button>
+                        </h5>
+                    </div>
+                    <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion-chat">
+                        <div id=lobby-chat" class="card-body">
+                            <div class="scroll">
+                                <ul></ul>
+                            </div>
+                            <div class="chatInput">
+                                <form class="chat-input" action="">
+                                    <input type="text" name="message" autocomplete="off" placeholder="Your message here"/>
+                                    <input type="submit" value="Send"/>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+
+
+            <!--<h4 class="accordbtn">Global</h4>
                 <div id="global-chat" class="accordcon">
                     <ul></ul>
                     <div class="chatInput">
@@ -128,7 +211,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div>-->
 
     <!-- Bootstrap Modal -->
     <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="" aria-hidden="true">
