Basic list of Online Users is Displaying

--- a/public/html/base.html
+++ b/public/html/base.html
@@ -64,10 +64,10 @@
                     </div>
 
                     <div id="collapsePlayersOne" class="collapse show" aria-labelledby="headingPlayersOne" data-parent="#accordion-players">
-                        <div id="global-player" class="card-body">
+                        <div id="global-players" class="card-body">
                             <div class="scroll">
                                 <ul>
-                                    <li>Austin</li>
+                                    <!-- Dynamically Populated by chat.js -->
                                 </ul>
                             </div>
                         </div>
@@ -82,10 +82,10 @@
                         </h5>
                     </div>
                     <div id="collapsePlayersTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion-players">
-                        <div id=lobby-players" class="card-body">
+                        <div id="lobby-players" class="card-body">
                             <div class="scroll">
                                 <ul>
-                                    <li>Some guy</li>
+                                    <!-- Dynamically Populated by chat.js -->
                                 </ul>
                             </div>
                         </div>
