Add Lobby Users to list

--- a/public/html/base.html
+++ b/public/html/base.html
@@ -171,7 +171,7 @@
                         </h5>
                     </div>
                     <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion-chat">
-                        <div id=lobby-chat" class="card-body">
+                        <div id="lobby-chat" class="card-body">
                             <div class="scroll">
                                 <ul></ul>
                             </div>
