--- a/public/html/snippets/lobbyList.html
+++ b/public/html/snippets/lobbyList.html
@@ -1,10 +1,21 @@
-<div id="bighome">
-    <div>Active Lobbies</div>
-    <nav>
-        <div class="nav">All</div>
-        <div class="nav">UNO</div>
-        <div class="nav">Go Fish</div>
-        <div class="nav end">Fibbage</div>
+<div>
+    <div class="sideTitle">Active Lobbies</div>
+    <nav class="navbar navbar-expand-sm navbar-dark">
+        <div class="collapse navbar-collapse">
+            <div class="collapse navbar-collapse">
+                <ul class="navbar-nav nav-tabs">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">All</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Go Fish</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">UNO</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </nav>
     <div id="table">
         <table id="lobbylist">
@@ -17,8 +28,7 @@
                 <th>Spectate</th>
             </tr>
             <tr>
-                <td>Austin is great</td>
-                <td>UNO</td>
+                <td>Austin is great</td>`````````````````````````````````````````````````````````````````````````````
                 <td>1</td>
                 <td>38932</td>
                 <td>Locked Symbol</td>
