Joincode front-end working. Some type checking a validation on client side

--- a/public/html/base.html
+++ b/public/html/base.html
@@ -82,7 +82,7 @@
                         </h5>
                     </div>
                     <div id="collapsePlayersTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion-players">
-                        <div id=lobby-players" class="card-body">
+                        <div id="lobby-players" class="card-body">
                             <div class="scroll">
                                 <ul>
                                     <li>Some guy</li>
@@ -101,7 +101,7 @@
                             <a class="nav-link" href="#"><div id="navp">Profile</div></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#"><div id="navl">My Leaderboard</div></a>
+                            <a class="nav-link" href="#"><div id="navl">Leaderboards</div></a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#"><div id="navj">Joincode</div></a>
@@ -155,7 +155,7 @@
                         </h5>
                     </div>
                     <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion-chat">
-                        <div id=lobby-chat" class="card-body">
+                        <div id="lobby-chat" class="card-body">
                             <div class="scroll">
                                 <ul></ul>
                             </div>
@@ -170,7 +170,7 @@
                 </div>
             </div>
         </div>
-            
+
         <div class="leaderboard">
                 <h1>Top Players</h1>
                 <div class="accord">
