--- a/public/html/snippets/joincode.html
+++ b/public/html/snippets/joincode.html
@@ -1,8 +1,15 @@
+
 <div class="modal-header">
     <h3>Enter Joincode</h3>
 </div>
 <div class="modal-body">
-    <p>TODO MAIN CONTENT</p>
+
+    <form id="joincodeForm" data-toggle="validator" role="form">
+        <div class="form-group has-feedback">
+            <input type="number" class="form-control form-control-lg" id="joincode" required>
+        </div>
+        <button type="submit" class="btn btn-success btn-lg">Enter</button>
+    </form>
 </div>
 <div class="modal-footer">
 
