Little bit of table cleanup and universal glyphcon support

--- a/public/html/snippets/lobbyList.html
+++ b/public/html/snippets/lobbyList.html
@@ -17,23 +17,28 @@
             </div>
         </div>
     </nav>
-    <div id="table">
+    <div id="table" class="table table-bordered">
         <table id="lobbylist">
-            <tr>
-                <th>Name</th>
-                <th>Type</th>
-                <th># of Players</th>
-                <th># of Spectators</th>
-                <th>Join</th>
-                <th>Spectate</th>
-            </tr>
-            <tr>
-                <td>Austin is great</td>`````````````````````````````````````````````````````````````````````````````
-                <td>1</td>
-                <td>38932</td>
-                <td>Locked Symbol</td>
-                <td>Unlocked Symbol</td>
-            </tr>
+            <thead>
+                <tr>
+                    <th>Name</th>
+                    <th>Type</th>
+                    <th># of Players</th>
+                    <th># of Spectators</th>
+                    <th>Join</th>
+                    <th>Spectate</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Austin is great</td>
+                    <td>fish</td>
+                    <td>38932</td>
+                    <td>ee23</td>
+                    <td><span class="glyphicon glyphicon-lock"></span></td>
+                    <td><span class="glyphicon glyphicon-lock"></span></td>
+                </tr>
+            </tbody>
         </table>
     </div>
     <div id="search">
