More table formatting

--- a/public/html/base.html
+++ b/public/html/base.html
@@ -171,23 +171,25 @@
             </div>
         </div>
 
-        <div class="leaderboard">
-                <h1>Top Players</h1>
-                <div class="accord">
-                    <h4 class="accordbtn">UNO</h4>
-                    <div class="accordcon">
-                        <ul id="UNO">
-                            <li>Austin</li>
-                        </ul>
-                    </div>
-                    <h4 class="accordbtn">SomeGame</h4>
-                    <div class="accordcon">
-                        <ul id="SomeOtherGame">
-                            <li>Some random Guy</li>
-                        </ul>
-                    </div>
+        <!-- I we can always access both the global leaderboards and the profile specific leaderboards does
+        this need to exist here too? -Austin -->
+        <!--<div class="leaderboard">
+            <h1>Top Players</h1>
+            <div class="accord">
+                <h4 class="accordbtn">UNO</h4>
+                <div class="accordcon">
+                    <ul id="UNO">
+                        <li>Austin</li>
+                    </ul>
+                </div>
+                <h4 class="accordbtn">SomeGame</h4>
+                <div class="accordcon">
+                    <ul id="SomeOtherGame">
+                        <li>Some random Guy</li>
+                    </ul>
                 </div>
             </div>
+        </div>-->
     <!-- Bootstrap Modal -->
     <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered" role="document">
