--- a/public/html/snippets/lobbyList.html
+++ b/public/html/snippets/lobbyList.html
@@ -18,31 +18,31 @@
         </div>
     </nav>
     <div id="table" class="table table-bordered">
-        <table id="lobbylist">
+        <table id="lobbylist" class="center">
             <thead>
                 <tr>
                     <th>Name</th>
-                    <th>Type</th>
+                    <th>Game Type</th>
                     <th># of Players</th>
                     <th># of Spectators</th>
-                    <th>Join</th>
+                    <th>Join Players</th>
                     <th>Spectate</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
                     <td>Austin is great</td>
-                    <td>fish</td>
-                    <td>38932</td>
-                    <td>ee23</td>
+                    <td>Go Fish</td>
+                    <td>2/4</td>
+                    <td>23</td>
                     <td><span class="glyphicon glyphicon-lock"></span></td>
-                    <td><span class="glyphicon glyphicon-lock"></span></td>
+                    <td><button type="button" class="btn btn-success">Join</button></span></td>
                 </tr>
             </tbody>
         </table>
     </div>
     <div id="search">
-        <input type="text" placeholder="Search">
-    </div>
-    <button id="createbtn">Create Lobby</button>
+        <div class="center">
+            <button type="button" class="btn btn-success btn-lg" id="createbtn">Create Lobby</button>
+        </div>
 </div>
