--- a/public/html/snippets/joincode.html
+++ b/public/html/snippets/joincode.html
@@ -8,7 +8,11 @@
         <div class="form-group has-feedback">
             <input type="number" class="form-control form-control-lg" id="joincode" required>
         </div>
-        <button type="submit" class="btn btn-success btn-lg">Enter</button>
+        <div class="center">
+            <button id="lobby" name="submit" value="player" type="submit" class="btn btn-success btn-lg">Join Lobby</button>
+            <button id="spec" name="submit" value="spec" type="submit" class="btn btn-success btn-lg">Join Spectators</button>
+        </div>
+
     </form>
 </div>
 <div class="modal-footer">
