Page height is 100%. Autoscroll on chat windows very broken. Cannot set auto scroll on dynamic sizes.

--- a/public/html/base.html
+++ b/public/html/base.html
@@ -39,15 +39,16 @@
         <script src="chat.js"></script>
     </head>
     <body>
-
-        <div class="d-flex justify-content-end" id="logout">
-            <a href="/logout"><h4>Log out</h4></a>
+        <div class="top">
+            <div class="d-flex justify-content-end" id="logout">
+                <a href="/logout"><h4>Log out</h4></a>
+            </div>
+            <div class="row justify-content-center" id="scratchLogo">
+                <h1>Scratch Games</h1>
+            </div>
         </div>
-        <div class="row justify-content-center" id="scratchLogo">
-            <h1>Scratch Games</h1>
-        </div>
 
-        <div class="row">
+        <div class="row fill">
         <div class="col-2" id="left">
             <div class="page-header sideTitle">
                 <h2>Players</h2>
