index game and dev info
Design index to be pretty and show information about developers and application

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -38,9 +38,38 @@
 
                     <!--<p class = 'jumboWord' >Welcome! Please <a href="/login">log in</a>.</p>-->
                 </div>
+                <div class = 'scrollDown'>
+                    <h3>Info &#8595</h3>
+                </div>
+            </div>
+
+
+        </section>
+
+        <section class = 'gameInfo'>
+            <h2>What is Scratch Games?</h2>
+            <h4>
+                An online application for people to be able to select from and play a variety of multiplayer card games
+            </h4>
+        </section>
+
+        <section class = 'gameInfo developers'>
+        <h2>The cool people that developed this</h2>
+            <div>
+                <section class = 'devInfo'>
+                    <ul>
+                        <li>Austin Wattling</li>
+                        <li>Kayleigh Kernaghan</li>
+                        <li>Oscar Velez</li>
+                        <li>Ben Grande</li>
+                        <li>Tariq Abdulghani</li>
+                        <li>Donald Lukinuk</li>
+                    </ul>
+                </section>
             </div>
 
         </section>
+
 
 
 
