--- a/public/html/index.html
+++ b/public/html/index.html
@@ -14,7 +14,7 @@
 
 
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-        <link rel="stylesheet" type="text/css" href="Main.css"/>
+        <link rel="stylesheet" type="text/css" href="index.css"/>
         <link rel = "stylesheet" type = "text/css" href = '../animate.css'/>
 
 
