index page changes

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -22,6 +22,7 @@
 
     </head>
     <body>
+    <div class = 'backImg'>
         <section class = "intro">
             <div class = "inner">
                 <!--animate.css and bootstrap css -->
@@ -45,6 +46,8 @@
 
 
         </section>
+    </div>
+
 
         <section class = 'gameInfo'>
             <h2>What is Scratch Games?</h2>
