Basic joining of lobby via Join Code

--- a/public/html/snippets/joincode.html
+++ b/public/html/snippets/joincode.html
@@ -6,7 +6,7 @@
 
     <form id="joincodeForm" data-toggle="validator" role="form">
         <div class="form-group has-feedback">
-            <input type="number" class="form-control form-control-lg" id="joincode" required>
+            <input type="number" class="form-control form-control-lg" name="joincode" required>
         </div>
         <div class="center">
             <button id="lobby" name="submit" value="player" type="submit" class="btn btn-success btn-lg">Join Lobby</button>
