More work on lobby landing page. Things starting to get dynamic. Lots of work left.

--- a/public/html/base.html
+++ b/public/html/base.html
@@ -39,7 +39,7 @@
         <script src="chat.js"></script>
     </head>
     <body>
-        <div class="top">
+        <div class=" b-bottom">
             <div class="d-flex justify-content-end" id="logout">
                 <a href="/logout"><h4>Log out</h4></a>
             </div>
