Fixing hidden elements
Switch from using `hidden` tag to `style='display: none;'`.
Fix uid out of scope

--- a/public/html/games/gofish.html
+++ b/public/html/games/gofish.html
@@ -16,7 +16,7 @@
 		    <label id="instructions-turn">Welcome To Go Fish</label><br>
 		    <label id="instructions-others"></label><br>
 		    <label id="instructions-wording"></label>
-		    <button id="ask-button" hidden>Ask</button>
+		    <button id="ask-button" style="display: none;">Ask</button>
 	    </div>
 	    <div id="card-deck">
 		    
@@ -26,7 +26,7 @@
 	    <div id="my-messages" class="user-message" hidden>
 	    </div>
     </div>
-    <button id="start-game" hidden>Start Game</button>
+    <button id="start-game" style="display: none;">Start Game</button>
     
   </body>
 </html>
