--- a/public/html/index.html
+++ b/public/html/index.html
@@ -39,6 +39,13 @@
 
                     <!--<p class = 'jumboWord' >Welcome! Please <a href="/login">log in</a>.</p>-->
                 </div>
+                <div class = 'gameInfo '>
+                    <h2>What is Scratch Games?</h2>
+                    <h4>
+                        An online application for people to be able to select from and play a variety of multiplayer card games
+                    </h4>
+
+                </div>
                 <div class = 'scrollDown'>
                     <h3>Info &#8595</h3>
                 </div>
@@ -49,12 +56,7 @@
     </div>
 
 
-        <section class = 'gameInfo'>
-            <h2>What is Scratch Games?</h2>
-            <h4>
-                An online application for people to be able to select from and play a variety of multiplayer card games
-            </h4>
-        </section>
+
 
         <section class = 'gameInfo developers'>
         <h2>The cool people that developed this</h2>
