--- a/public/html/snippets/goFishSettings.html
+++ b/public/html/snippets/goFishSettings.html
@@ -1,7 +1,7 @@
 <div class="page-header sideTitle b-space">
-    <h2>Game Settings</h2>
+    <h2>Go Fish Settings</h2>
 </div>
-<div class="container">
+<div class="container fun">
     <form id="gameSet" action="">
         <div class="form-group row">
             <label class="col-6 col-form-label" for="type">Number of rounds: </label>
@@ -16,9 +16,9 @@
             </div>
         </div>
         <div class="form-group row">
-            <label class="col-6 col-form-label" for="numPlay">Number of cards to Match: </label>
+            <label class="col-6 col-form-label" for="numMatch">Number of cards to Match: </label>
             <div class="col-6">
-                <select class="form-control" name="numCards" id="numPlay">
+                <select class="form-control" name="numCards" id="numMatch">
                     <option value="2" selected>2</option>
                     <option value="4">4</option>
                 </select>
