Code cleaning for readability.

--- a/public/html/snippets/goFishSettings.html
+++ b/public/html/snippets/goFishSettings.html
@@ -1,7 +1,7 @@
 <div class="page-header sideTitle b-space">
     <h2>Go Fish Settings</h2>
 </div>
-<div class="container fun">
+<div class="container">
     <form id="gameSet" action="">
         <div class="form-group row">
             <label class="col-6 col-form-label" for="type">Number of rounds: </label>
