Stupidly missed some things during merging

--- a/public/html/games/Uno.html
+++ b/public/html/games/Uno.html
@@ -3,7 +3,7 @@
   <head>
     <title>Hello World 2.0</title>
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-    <link rel="stylesheet" type="text/css" href="/css/style.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
 	  
