--- a/public/html/index.html
+++ b/public/html/index.html
@@ -16,6 +16,7 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="index.css"/>
         <link rel = "stylesheet" type = "text/css" href = '../animate.css'/>
+        <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0' />
 
 
         <title>Welcome</title>
@@ -46,9 +47,12 @@
                     </h4>
 
                 </div>
+
+                <!--
                 <div class = 'scrollDown'>
-                    <h3>Info &#8595</h3>
+                    <h3>Scroll Down &#8595</h3>
                 </div>
+                -->
             </div>
 
 
