--- a/public/html/login.html
+++ b/public/html/login.html
@@ -18,6 +18,8 @@
     <link rel="stylesheet" type="text/css" href="Login.css">
     <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
     <script src="/login.js"></script>
+    <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0' />
+
 </head>
 <body>
 <a href="index.html">
