--- a/public/html/base.html
+++ b/public/html/base.html
@@ -102,13 +102,13 @@
                         <div class="collapse navbar-collapse" id="navbarText">
                             <ul class="navbar-nav">
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#"><div id="navp">Profile</div></a>
+                                    <a class="nav-link" href="#"><div id="navp"> Profile </div></a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#"><div id="navl">Leaderboards</div></a>
+                                    <a class="nav-link" href="#"><div id="navl"> Leaderboards </div></a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#"><div id="navj">Joincode</div></a>
+                                    <a class="nav-link" href="#"><div id="navj"> Joincode </div></a>
                                 </li>
                             </ul>
                         </div>
@@ -138,7 +138,7 @@
 
                             <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion-chat">
                                 <div id="global-chat" class="card-body">
-                                    <div class="scroll">
+                                    <div class="scroll lobbyChat">
                                         <ul></ul>
                                     </div>
                                     <div class="chatInput">
@@ -160,7 +160,7 @@
                             </div>
                             <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion-chat">
                                 <div id="lobby-chat" class="card-body">
-                                    <div class="scroll">
+                                    <div class="scroll lobbyChat">
                                         <ul></ul>
                                     </div>
                                     <div class="chatInput">
