--- a/public/html/modals/createLobby.html
+++ b/public/html/modals/createLobby.html
@@ -40,7 +40,7 @@
                 </select>
             </div>
             <p id="message" style="color: red;"><p>
-            <button type="submit" value="Create" class="btn btn-success">Create</button>
+            <button type="submit" value="Create" class="btn btn-success btn-lg">Create</button>
         </form>
     </div>
 </div>
