--- a/public/html/base.html
+++ b/public/html/base.html
@@ -69,10 +69,8 @@
 
                             <div id="collapsePlayersOne" class="collapse show" aria-labelledby="headingPlayersOne" data-parent="#accordion-players">
                                 <div id="global-players" class="card-body">
-                                    <div class="scroll">
-                                        <ul>
-                                            <!-- Dynamically Populated by chat.js -->
-                                        </ul>
+                                    <div class="pre-scrollable" id="GlobalPlayerWindow">
+                                        <ul><!-- Dynamically Populated by chat.js --></ul>
                                     </div>
                                 </div>
                             </div>
@@ -87,10 +85,8 @@
                             </div>
                             <div id="collapsePlayersTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion-players">
                                 <div id="lobby-players" class="card-body">
-                                    <div class="scroll">
-                                        <ul>
-                                            <!-- Dynamically Populated by chat.js -->
-                                        </ul>
+                                    <div class="pre-scrollable" id="GlobalLobbyWindow">
+                                        <ul><!-- Dynamically Populated by chat.js --></ul>
                                     </div>
                                 </div>
                             </div>
@@ -138,7 +134,7 @@
 
                             <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion-chat">
                                 <div id="global-chat" class="card-body">
-                                    <div class="scroll lobbyChat">
+                                    <div class="pre-scrollable" id="GlobalChatWindow">
                                         <ul></ul>
                                     </div>
                                     <div class="chatInput">
@@ -160,7 +156,7 @@
                             </div>
                             <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion-chat">
                                 <div id="lobby-chat" class="card-body">
-                                    <div class="scroll lobbyChat">
+                                    <div class="pre-scrollable" id="LobbyChatWindow">
                                         <ul></ul>
                                     </div>
                                     <div class="chatInput">
