--- a/public/html/snippets/profile.html
+++ b/public/html/snippets/profile.html
@@ -2,7 +2,34 @@
     <h3>Profile Page</h3>
 </div>
 <div class="modal-body">
-    <p>TODO MAIN CONTENT</p>
+    <h4>User Name</h4>
+    <div class = "change-name">
+        <form >
+            <p>Change Username:</p>
+            <input type="text" id="username" placeholder="New Username"><br>
+            <input type="button" value="Submit" onClick="">
+
+        </form>
+        <form >
+            <p>Change Password:</p>
+            <input type="text" id="Opassword" placeholder="Old Password"><br>
+            <input type="text" id="Npassword" placeholder="New Password"><br>
+            <input type="text" id="Cpassword" placeholder="Confirm Password"><br>
+            <input type="button" value="Submit" onClick="">
+
+        </form>
+        <form>
+            <p>Change Email:</p>
+            <input type="text" id="username" placeholder="New Email Address"><br>
+            <input type="button" value="Submit" onClick="">
+
+        </form>
+
+
+    </div>
+
+
+
 </div>
 <div class="modal-footer">
 
