Player list front. Bare bones

--- a/public/html/snippets/lobby.html
+++ b/public/html/snippets/lobby.html
@@ -20,8 +20,8 @@
             <div class="page-header sideTitle">
                 <h2>Players</h2>
             </div>
-            <div class="table table-bordered">
-                <table id="Players" class="center">
+            <div id="Players" class="container">
+                <!--<table id="Players" class="center">
                 <tbody>
                     <tr>
                         <td>Austin</td>
@@ -36,7 +36,7 @@
                         <td><span class="glyphicon glyphicon-remove"></span></td>
                     </tr>
                 </tbody>
-                </table>
+                </table> -->
             </div>
         </div>
         <div class="col voidPad">
