--- a/public/html/snippets/lobby.html
+++ b/public/html/snippets/lobby.html
@@ -15,44 +15,19 @@
             <h2>Joincode:</h2>
         </div>
     </div>
-    <div class="row h-25">
+    <div class="row">
         <div class="col voidPad" style="border-right: black solid 2px">
             <div class="page-header sideTitle">
                 <h2>Players</h2>
             </div>
             <div id="Players" class="container">
-                <!--<table id="Players" class="center">
-                <tbody>
-                    <tr>
-                        <td>Austin</td>
-                        <td><button type="button" class="btn btn-success">Become Spectator</button></td>
-                        <td><button type="button" class="btn btn-danger">Kick from Lobby</button></td>
-                        <td><span class="glyphicon glyphicon-ok"></span></td>
-                    </tr>
-                    <tr>
-                        <td>Pizza</td>
-                        <td><button type="button" class="btn btn-success">Become Spectator</button></td>
-                        <td><button type="button" class="btn btn-danger">Kick from Lobby</button></td>
-                        <td><span class="glyphicon glyphicon-remove"></span></td>
-                    </tr>
-                </tbody>
-                </table> -->
             </div>
         </div>
         <div class="col voidPad">
             <div class="page-header sideTitle">
                 <h2>Spectators</h2>
             </div>
-            <div class="table table-bordered">
-                <table id="Spectators" class="center">
-                    <tbody>
-                    <tr>
-                        <td>That guy again</td>
-                        <td><button type="button" class="btn btn-success">Become player</button></td>
-                        <td><button type="button" class="btn btn-danger">Leave Lobby</button></td>
-                    </tr>
-                    </tbody>
-                </table>
+            <div id="Spectators" class="container">
             </div>
         </div>
     </div>
