Added kill lobby button and Removed spectator ready up button

--- a/public/html/snippets/lobby.html
+++ b/public/html/snippets/lobby.html
@@ -77,9 +77,10 @@
                     </div>
                     <div class="center">
                         <p id="message" style="color: red;"><p>
-                        <button disabled id="confirm" type="submit" value="Create" class="btn btn-success">Confirm</button>
+                        <button disabled id="confirm" type="submit" value="Create" class="btn btn-success btn-lg">Confirm</button>
                     </div>
                 </form>
+                <button id="abandon" type="button" class="btn btn-danger btn-sm btn">Kill lobby</button>
             </div>
         </div>
     </div>
