--- a/public/html/base.html
+++ b/public/html/base.html
@@ -41,6 +41,20 @@
         <script src="chat.js"></script>
     </head>
     <body>
+    <style>
+        body{
+            background-color: #DCF0FF;
+
+            /*possible colors:
+            #3DA5D9
+            #4F5D75
+            EEE0CB
+            B7D7EF
+
+
+            */
+        }
+    </style>
         <div class=" b-bottom">
             <div class="d-flex justify-content-end" id="logout">
                 <a href="/logout"><h4>Log out</h4></a>
