--- a/public/html/snippets/profile.html
+++ b/public/html/snippets/profile.html
@@ -50,12 +50,12 @@
             <form>
                 <div class="form-group">
                     <label for="exampleInputPassword1">New Username</label>
-                    <input type="text" class="form-control col-sm-10" placeholder="New Username">
+                    <input type="text" class="form-control " placeholder="New Username">
                 </div>
 
                 <div class="form-group">
-                    <label for="exampleInputPassword1">Password</label>
-                    <input type="password" class="form-control col-sm-10" id="exampleInputPassword1" placeholder="Password">
+                    <label for="exampleInputPassword1">Confirm Password</label>
+                    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
                 </div>
                 <button type="submit" class="btn btn-success btn-lg">Submit</button>
 
@@ -70,12 +70,12 @@
             <form>
 
                 <div class="form-group">
-                    <label for="exampleFormControlInput1">Old Email address</label>
-                    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+                    <label >Old Email address</label>
+                    <input type="email" class="form-control"  placeholder="name@example.com">
                 </div>
                 <div class="form-group">
-                    <label for="exampleFormControlInput1">New Email address</label>
-                    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+                    <label>New Email address</label>
+                    <input type="email" class="form-control"  placeholder="name@example.com">
                 </div>
                 <button type="submit" class="btn btn-success btn-lg">Submit</button>
             </form>
@@ -84,16 +84,19 @@
         <!--This can be deleted if not used-->
 
         <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">
-            <div class="form-group">
-                <label for="exampleInputPassword1">Old Password</label>
-                <input type="password" class="form-control col-sm-10" id="exampleInputPassword1" placeholder="Password">
-            </div>
+            <form>
+                <div class="form-group">
+                    <label >Old Password</label>
+                    <input type="password" class="form-control" placeholder="Password">
+                </div>
 
-            <div class="form-group">
-                <label for="exampleInputPassword1">New Password</label>
-                <input type="password" class="form-control col-sm-10" id="exampleInputPassword1" placeholder="Password">
-            </div>
-            <button type="submit" class="btn btn-success btn-lg">Submit</button>
+                <div class="form-group">
+                    <label >New Password</label>
+                    <input type="password" class="form-control" placeholder="Password">
+                </div>
+                <button type="submit" class="btn btn-success btn-lg">Submit</button>
+            </form>
+
         </div>
 
     </div>
