--- a/public/html/snippets/lobbyList.html
+++ b/public/html/snippets/lobbyList.html
@@ -5,13 +5,13 @@
             <div class="collapse navbar-collapse">
                 <ul class="navbar-nav nav-tabs">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">All</a>
+                        <a class="nav-link availableGames" href="#">All</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Go Fish</a>
+                        <a class="nav-link availableGames" href="#">Go Fish</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">UNO</a>
+                        <a class="nav-link availableGames" href="#">UNO</a>
                     </li>
                 </ul>
             </div>
@@ -36,7 +36,7 @@
                     <td>2/4</td>
                     <td>23</td>
                     <td><span class="glyphicon glyphicon-lock"></span></td>
-                    <td><button type="button" class="btn btn-success">Join</button></span></td>
+                    <td><button type="button" class="btn btn-success btn-lg ">Join</button></span></td>
                 </tr>
             </tbody>
         </table>
