--- a/public/html/snippets/lobby.html
+++ b/public/html/snippets/lobby.html
@@ -59,7 +59,7 @@
                             </select>
                         </div>
                     </div>
-                    <div class="form-group row">
+                    <!--<div class="form-group row">
                         <label class="col-6 col-form-label" for="numSpec">Number of allowed Spectators:</label>
                         <div class="col-6">
                             <select name="numSpec" class="form-control" id="numSpec">
@@ -74,7 +74,7 @@
                                 <option value="8">8</option>
                             </select>
                         </div>
-                    </div>
+                    </div>-->
                     <div class="center">
                         <p id="message" style="color: red;"><p>
                         <button disabled id="confirm" type="submit" value="Create" class="btn btn-success btn-lg">Confirm</button>
