--- a/public/html/base.html
+++ b/public/html/base.html
@@ -133,8 +133,16 @@
                             </div>
                             <div class="chatInput">
                                 <form class="chat-input" action="">
-                                    <input type="text" name="message" autocomplete="off" placeholder="Your message here"/>
-                                    <input type="submit" value="Send"/>
+                                    <div class="container">
+                                        <div class="row justify-content-md-center">
+                                            <div class="col-8" style="border-top:0px">
+                                                <input id="chatBox" type="text" name="message" autocomplete="off" placeholder="Your message here"/>
+                                            </div>
+                                            <div class="col-4" style="padding:0px">
+                                                <input id="chatSend" type="submit" value="Send"/>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </form>
                             </div>
                         </div>
@@ -150,8 +158,16 @@
                             </div>
                             <div class="chatInput">
                                 <form class="chat-input" action="">
-                                    <input type="text" name="message" autocomplete="off" placeholder="Your message here"/>
-                                    <input type="submit" value="Send"/>
+                                    <div class="container">
+                                        <div class="row justify-content-md-center">
+                                            <div class="col-8">
+                                                <input type="text" name="message" autocomplete="off" placeholder="Your message here"/>
+                                            </div>
+                                            <div class="col-4">
+                                                <input type="submit" value="Send"/>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </form>
                             </div>
                         </div>
