--- a/public/html/base.html
+++ b/public/html/base.html
@@ -65,7 +65,7 @@
         </div>
 
         <div class = 'centerItems container-fluid'>
-            <div class="row fill">
+            <div class="row fill" id="mainScreen">
                 <div class="col-2 section onlinePlayers" id="left">
                     <div class="page-header sideTitle">
                         <h2>Players</h2>
