pushing for donald

--- a/public/html/snippets/lobbyList.html
+++ b/public/html/snippets/lobbyList.html
@@ -17,7 +17,7 @@
             </div>
         </div>
     </nav>
-    <div id="table" class="table table-bordered">
+    <div id="table" class="table table-bordered pre-scrollable">
         <table id="lobbylist" class="center">
             <thead>
                 <tr>
@@ -25,7 +25,7 @@
                     <th>Game Type</th>
                     <th># of Players</th>
                     <th># of Spectators</th>
-                    <th>Join Players</th>
+                    <th>Play</th>
                     <th>Spectate</th>
                 </tr>
             </thead>
