FIxing the lobbyList screen page
Styling!!!!!!

--- a/public/html/snippets/lobbyList.html
+++ b/public/html/snippets/lobbyList.html
@@ -1,6 +1,6 @@
-<div>
-    <div class="sideTitle">Active Lobbies</div>
-    <nav class="navbar navbar-expand-sm navbar-dark">
+<div id="activeLobbies">
+    <div class="sideTitle" id="activeLobbiesBar">Active Lobbies</div>
+    <nav class="navbar navbar-expand-sm navbar-dark" id="gameTabs">
         <div class="collapse navbar-collapse">
             <div class="collapse navbar-collapse">
                 <ul class="navbar-nav nav-tabs">
@@ -17,7 +17,7 @@
             </div>
         </div>
     </nav>
-    <div id="table" class="table table-bordered pre-scrollable">
+    <div id="mainLobbyList" class="table table-bordered pre-scrollable">
         <table id="lobbylist" class="center">
             <thead>
                 <tr>
