lobby list and lobby styling

--- a/public/html/snippets/lobby.html
+++ b/public/html/snippets/lobby.html
@@ -1,10 +1,10 @@
 <div class="container">
-    <div class="row" style="border-top: black solid 2px; border-bottom: black solid 2px">
+    <div class="row bar" style="border-top: black solid 2px; border-bottom: black solid 2px">
         <div id ="lobbyName" class="col center">
             <h2>Lobby Name:</h2>
         </div>
     </div>
-    <div class="row" style="border-top: black solid 2px; border-bottom: black solid 2px">
+    <div class="row bar" style="border-top: black solid 2px; border-bottom: black solid 2px">
         <div id="gameType" class="col center">
             <h2>Game Type: </h2>
         </div>
