--- a/public/html/gamesettings/Uno.html
+++ b/public/html/gamesettings/Uno.html
@@ -1,4 +1,4 @@
-<div class="page-header sideTitle b-space">
+<div class="page-header sideTitle b-space playerSpectatorList">
     <h2>UNO Settings</h2>
 </div>
 <div class="container">
