Changed to 'deal cards' instead of start

--- a/public/html/games/Uno.html
+++ b/public/html/games/Uno.html
@@ -46,7 +46,7 @@
                 <button id="select-skip">Skip player</button>
             </div>
         </div>
-        <button id="start-game" style="display: none;">Start Game</button>
+        <button id="start-game" style="display: none;">Deal Cards</button>
         
     </body>
 </html>
