--- a/public/html/games/GoFish.html
+++ b/public/html/games/GoFish.html
@@ -34,7 +34,7 @@
             <div id="my-messages" class="user-message" style="display: none;">
             </div>
         </div>
-        <button id="start-game" style="display: none;">Start Game</button>
+        <button id="start-game" style="display: none;">Deal Cards</button>
         
     </body>
 </html>
