--- a/public/html/base.html
+++ b/public/html/base.html
@@ -137,10 +137,10 @@
                                     <div class="container">
                                         <div class="row justify-content-md-center">
                                             <div class="col-8" style="border-top:0px">
-                                                <input id="chatBox" type="text" name="message" autocomplete="off" placeholder="Your message here"/>
+                                                <input class="chatBox" type="text" name="message" autocomplete="off" placeholder="Your message here"/>
                                             </div>
                                             <div class="col-4" style="padding:0px">
-                                                <input id="chatSend" type="submit" value="Send"/>
+                                                <input class="chatBox" type="submit" value="Send"/>
                                             </div>
                                         </div>
                                     </div>
@@ -161,11 +161,11 @@
                                 <form class="chat-input" action="">
                                     <div class="container">
                                         <div class="row justify-content-md-center">
-                                            <div class="col-8">
-                                                <input type="text" name="message" autocomplete="off" placeholder="Your message here"/>
+                                            <div class="col-8" style="border-top:0px">
+                                                <input class="chatBox" type="text" name="message" autocomplete="off" placeholder="Your message here"/>
                                             </div>
-                                            <div class="col-4">
-                                                <input type="submit" value="Send"/>
+                                            <div class="col-4" style="padding:0px">
+                                                <input class="chatBox" type="submit" value="Send"/>
                                             </div>
                                         </div>
                                     </div>
