--- a/public/html/gamesettings/GoFish.html
+++ b/public/html/gamesettings/GoFish.html
@@ -1,4 +1,4 @@
-<div class="page-header sideTitle b-space playerSpectatorList">
+<div class="page-header sideTitle b-space playerSpectatorList" id="goFishSettingLobby">
     <h2>Go Fish Settings</h2>
 </div>
 <div class="container">
