--- a/public/html/snippets/lobby.html
+++ b/public/html/snippets/lobby.html
@@ -4,7 +4,7 @@
             <h2>Lobby Name:</h2>
         </div>
     </div>
-    <div class="row bar" style="border-top: black solid 2px; border-bottom: black solid 2px">
+    <div class="row bar" style="border-bottom: black solid 2px">
         <div id="gameType" class="col center">
             <h2>Game Type: </h2>
         </div>
@@ -22,6 +22,7 @@
             </div>
             <div class="pre-scrollable scrollingList">
                 <div id="Players" class="container">
+                    <!-- Added by Javascript code -->
                 </div>
             </div>
         </div>
@@ -31,6 +32,7 @@
             </div>
             <div class="pre-scrollable scrollingList">
                 <div id="Spectators" class="container">
+                    <!-- Added from Javascript code -->
                 </div>
             </div>
         </div>
@@ -40,7 +42,7 @@
             <!-- Loaded Dynamically depending on the game -->
         </div>
         <div class="col center voidPad">
-            <div class="page-header sideTitle danger playerSpectatorList">
+            <div class="page-header sideTitle danger playerSpectatorList" id="dangerSettingLobby">
                 <h2>Danger Zone</h2>
             </div>
             <div class="container">
