Front end stuff and game over

--- a/public/html/games/GoFish.html
+++ b/public/html/games/GoFish.html
@@ -24,7 +24,7 @@
                 <label id="instructions-turn">Welcome To Go Fish</label><br>
                 <label id="instructions-others"></label><br>
                 <label id="instructions-wording"></label>
-                <button id="ask-button" style="display: none;">Ask</button>
+                <button id="ask-button" style="display: none;">Confirm</button>
             </div>
             <div id="card-deck">
                 
