--- a/public/html/base.html
+++ b/public/html/base.html
@@ -136,10 +136,10 @@
                                 <form class="chat-input" action="">
                                     <div class="container">
                                         <div class="row justify-content-md-center">
-                                            <div class="col-8" style="border-top:0px">
+                                            <div class="col-8 chatPadding" style="border-top:0px">
                                                 <input class="chatBox" type="text" name="message" autocomplete="off" placeholder="Your message here"/>
                                             </div>
-                                            <div class="col-4" style="padding:0px">
+                                            <div class="col-4 chatPadding" style="padding:0px">
                                                 <input class="chatBox" type="submit" value="Send"/>
                                             </div>
                                         </div>
@@ -161,10 +161,10 @@
                                 <form class="chat-input" action="">
                                     <div class="container">
                                         <div class="row justify-content-md-center">
-                                            <div class="col-8" style="border-top:0px">
+                                            <div class="col-8 chatPadding" style="border-top:0px">
                                                 <input class="chatBox" type="text" name="message" autocomplete="off" placeholder="Your message here"/>
                                             </div>
-                                            <div class="col-4" style="padding:0px">
+                                            <div class="col-4 chatPadding" style="padding:0px">
                                                 <input class="chatBox" type="submit" value="Send"/>
                                             </div>
                                         </div>
