Working on leaderboards

--- a/public/html/snippets/leaderboard.html
+++ b/public/html/snippets/leaderboard.html
@@ -2,7 +2,13 @@
     <h3>Global Leaderboard</h3>
 </div>
 <div class="modal-body">
-    <p>TODO MAIN CONTENT</p>
+    <ul class="nav nav-tabs" id="myTab" role="tablist">
+        <!-- Loaded in dynamically-->
+    </ul>
+
+    <div class="tab-content" id="myTabContent">
+        <!-- Loaded in dynamically -->
+    </div>
 </div>
 <div class="modal-footer">
 
