using table in lobbylist

--- a/public/html/snippets/lobbyList.html
+++ b/public/html/snippets/lobbyList.html
@@ -18,7 +18,7 @@
         </div>
     </nav>
     <div id="mainLobbyList" class="table table-bordered pre-scrollable">
-        <table id="lobbylist" class="center">
+        <table id="lobbylist" class="table center">
             <thead>
                 <tr>
                     <th>Name</th>
