Leaderboard front end should be mostly functional

--- a/public/html/snippets/lobbyList.html
+++ b/public/html/snippets/lobbyList.html
@@ -5,13 +5,13 @@
             <div class="collapse navbar-collapse">
                 <ul class="navbar-nav nav-tabs">
                     <li class="nav-item">
-                        <div id="All" class="nav-link availableGames">All</div>
+                        <div id="AllList" class="nav-link availableGames">All</div>
                     </li>
                     <li class="nav-item">
-                        <div id="GoFish" class="nav-link availableGames">Go Fish</div>
+                        <div id="GoFishList" class="nav-link availableGames">Go Fish</div>
                     </li>
                     <li class="nav-item">
-                        <div id="UNO" class="nav-link availableGames">UNO</div>
+                        <div id="UNOist" class="nav-link availableGames">UNO</div>
                     </li>
                 </ul>
             </div>
