Should display your score Along the bottom as well as in the list. Also should update accordingly

--- a/public/html/snippets/leaderboard.html
+++ b/public/html/snippets/leaderboard.html
@@ -10,6 +10,6 @@
         <!-- Loaded in dynamically -->
     </div>
 </div>
-<div class="modal-footer">
-
+<div class="modal-footer" id="myScoreFoot">
+    <!-- Loaded in Dynamically -->
 </div>
