Hooking up profile.

--- a/public/html/snippets/lobbyList.html
+++ b/public/html/snippets/lobbyList.html
@@ -11,7 +11,7 @@
                         <div id="GoFishList" class="nav-link availableGames">Go Fish</div>
                     </li>
                     <li class="nav-item">
-                        <div id="UNOist" class="nav-link availableGames">UNO</div>
+                        <div id="UNOList" class="nav-link availableGames">UNO</div>
                     </li>
                 </ul>
             </div>
