--- a/public/html/modals/createLobby.html
+++ b/public/html/modals/createLobby.html
@@ -25,7 +25,7 @@
                     <!-- Options Populated Dynamically -->
                 </select>
             </div>
-            <div class="form-group">
+            <!--<div class="form-group">
                 <label for="numSpec">Number of allowed Spectators:</label>
                 <select name="numSpec" class="form-control" id="numSpec">
                     <option value="" disabled selected>Select</option>
@@ -38,7 +38,7 @@
                     <option value="7">7</option>
                     <option value="8">8</option>
                 </select>
-            </div>
+            </div>-->
             <p id="message" style="color: red;"><p>
             <button type="submit" value="Create" class="btn btn-success btn-lg">Create</button>
         </form>
