--- a/public/html/snippets/lobby.html
+++ b/public/html/snippets/lobby.html
@@ -65,22 +65,6 @@
                             </select>
                         </div>
                     </div>
-                    <!--<div class="form-group row">
-                        <label class="col-6 col-form-label" for="numSpec">Number of allowed Spectators:</label>
-                        <div class="col-6">
-                            <select name="numSpec" class="form-control" id="numSpec">
-                                <option value="" disabled selected>Select</option>
-                                <option value="1">1</option>
-                                <option value="2">2</option>
-                                <option value="3">3</option>
-                                <option value="4">4</option>
-                                <option value="5">5</option>
-                                <option value="6">6</option>
-                                <option value="7">7</option>
-                                <option value="8">8</option>
-                            </select>
-                        </div>
-                    </div>-->
                     <div class="center">
                         <p id="message" style="color: red;"><p>
                         <button disabled id="confirm" type="submit" value="Create" class="btn btn-success btn-lg">Confirm</button>
@@ -91,8 +75,15 @@
         </div>
     </div>
     <div class="row bar">
+        <div id="userNeedsHelp" class="col center pad">
+
+        </div>
+    </div>
+    <div class="row bar">
         <div class="col center pad">
             <button id="startBtn" type="button" class="btn btn-warning btn-lg btn-block">Start Game</button>
         </div>
+
     </div>
+
 </div>
