Bit more mobile styling

--- a/public/html/games/GoFish.html
+++ b/public/html/games/GoFish.html
@@ -21,10 +21,10 @@
             <div id="my-cards">
             </div>
             <div id="instructions">
-                <label id="instructions-turn">Welcome To Go Fish</label><br>
-                <label id="instructions-others"></label><br>
-                <label id="instructions-wording"></label>
-                <button id="ask-button" style="display: none;">Confirm</button>
+                <div id="instructions-turn">Welcome To Go Fish</div>
+                <div id="instructions-others"></div>
+                <div id="instructions-wording"></div>
+                <button id="ask-button" style="display: none;">Ask</button>
             </div>
             <div id="card-deck">
                 
