--- a/public/html/snippets/game.html
+++ b/public/html/snippets/game.html
@@ -1,2 +1,4 @@
-<iframe id="game" src="" width="100%" height="100%" style="display:none"></iframe>
-<button id="leave-lobby">Leave</button>
+<div id="gameScreen">
+    <iframe id="game" src="" width="100%" height="100%" style="display:none; background:transparent; border:0px;"></iframe>
+    <button id="leave-lobby">Leave</button>
+</div>
